2005-01-09  jrandom     * Bugfix for a rare SSU error (thanks cervantes!)     * More progress on the blog interface, allowing customizable blog-wide       links.
Monotone-Parent: e4c3b67206eb1977671ec2364271eb476ade4a1d
Monotone-Revision: e60e379276c35911c299a58e49e22641680f7dc3

Monotone-Author: jrandom
Monotone-Date: 2006-01-09T06:33:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.378 2006/01/04 21:48:17 jrandom Exp $
+$Id: history.txt,v 1.379 2006/01/08 15:54:39 jrandom Exp $
+
+2005-01-09  jrandom
+    * Bugfix for a rare SSU error (thanks cervantes!)
+    * More progress on the blog interface, allowing customizable blog-wide
+      links.
 
 2006-01-08  jrandom
     * First pass of the new blog interface, though without much of the useful
