2005-01-09  jrandom     * Removed a longstanding bug that had caused unnecessary router identity       churn due to clock skew     * Temporarily sanity check within the streaming lib for long pending       writes     * Added support for a blog-wide logo to Syndie, and automated the pushing       of updated extended blog info data along side the metadata.
Monotone-Parent: a27acc54de0382b762896f74dde01e752ee8b88e
Monotone-Revision: 300ab40fcaa8d5e11fb6823923156a6c4349d146

Monotone-Author: jrandom
Monotone-Date: 2006-01-09T22:22:41
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,12 @@
-$Id: history.txt,v 1.379 2006/01/08 15:54:39 jrandom Exp $
+$Id: history.txt,v 1.380 2006/01/09 01:33:29 jrandom Exp $
+
+2005-01-09  jrandom
+    * Removed a longstanding bug that had caused unnecessary router identity
+      churn due to clock skew
+    * Temporarily sanity check within the streaming lib for long pending
+      writes
+    * Added support for a blog-wide logo to Syndie, and automated the pushing
+      of updated extended blog info data along side the metadata.
 
 2005-01-09  jrandom
     * Bugfix for a rare SSU error (thanks cervantes!)
