2005-01-10  jrandom     * Added the per-post list of attachments/blogs/etc to the blog view in       Syndie (though this does not yet include comments or some further       refinements)     * Have the I2P shortcut launch i2p.exe instead of i2psvc.exe on windows,       removing the dox box (though also removes the restart functionality...)     * Give the i2p.exe the correct java.library.path to support the systray       dll (thanks Bobcat, Sugadude, anon!)
Monotone-Parent: d7c87eb702d69b65fe33db3b1d2131c707b0e9f3
Monotone-Revision: 35bcea0041f46ca93d22542572fefd1685006807

Monotone-Author: jrandom
Monotone-Date: 2006-01-10T06:59:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.380 2006/01/09 01:33:29 jrandom Exp $
+$Id: history.txt,v 1.381 2006/01/09 17:22:43 jrandom Exp $
+
+2005-01-10  jrandom
+    * Added the per-post list of attachments/blogs/etc to the blog view in
+      Syndie (though this does not yet include comments or some further
+      refinements)
+    * Have the I2P shortcut launch i2p.exe instead of i2psvc.exe on windows,
+      removing the dox box (though also removes the restart functionality...)
+    * Give the i2p.exe the correct java.library.path to support the systray
+      dll (thanks Bobcat, Sugadude, anon!)
 
 2005-01-09  jrandom
     * Removed a longstanding bug that had caused unnecessary router identity
