2005-01-11  jrandom     * Include the attachments/blogs/etc for comments on the blog view     * Syndie HTML fixes (thanks cervantes!)     * Make sure we fully reset the objects going into our cache before we       reuse them (thanks zzz!)
Monotone-Parent: 111f1379e0acee0fcfd465a7fc8f4bdd434f543f
Monotone-Revision: ef092fed253f5de4c725f8c027c50918c73eeb0b

Monotone-Author: jrandom
Monotone-Date: 2006-01-11T20:32:34
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.381 2006/01/09 17:22:43 jrandom Exp $
+$Id: history.txt,v 1.382 2006/01/10 01:59:08 jrandom Exp $
+
+2005-01-11  jrandom
+    * Include the attachments/blogs/etc for comments on the blog view
+    * Syndie HTML fixes (thanks cervantes!)
+    * Make sure we fully reset the objects going into our cache before we
+      reuse them (thanks zzz!)
 
 2005-01-10  jrandom
     * Added the per-post list of attachments/blogs/etc to the blog view in
