--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.382 2006/01/10 01:59:08 jrandom Exp $
+$Id: history.txt,v 1.383 2006/01/11 15:32:36 jrandom Exp $
+
+2005-01-11  Complication
+    * CSS comment fixes
 
 2005-01-11  jrandom
     * Include the attachments/blogs/etc for comments on the blog view
