2005-01-12  cervantes     * Syndie CSS tweaks to removed some redundant declarations, improve font       scaling and layout robustness. Improved cross browser compatibility       (in other words "kicked IE"). Tightened the look of the blog template       a little.
Monotone-Parent: b4671727dc4e071e532062058c879e12f200c17d
Monotone-Revision: 3a4dd0ac9ddfa6be4a5418423276a8db5c13300b

Monotone-Author: cervantes
Monotone-Date: 2006-01-12T09:59:55
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.383 2006/01/11 15:32:36 jrandom Exp $
+$Id: history.txt,v 1.384 2006/01/11 18:19:38 jrandom Exp $
+
+2005-01-12  cervantes
+    * Syndie CSS tweaks to removed some redundant declarations, improve font
+      scaling and layout robustness. Improved cross browser compatibility
+      (in other words "kicked IE"). Tightened the look of the blog template
+      a little.
 
 2005-01-11  Complication
     * CSS comment fixes
