2005-01-12  jrandom     * Only create the loadtest.log if requested to do so (thanks zzz!)     * Make sure we cleanly take into consideration the appropriate data       points when filtering out duplicate messages in the message validator,       and report the right bloom filter false positives rate (not used for       anything except debugging)
Monotone-Parent: 3a4dd0ac9ddfa6be4a5418423276a8db5c13300b
Monotone-Revision: 2db20dd750f518d8c8be995e26982a298be465f7

Monotone-Author: jrandom
Monotone-Date: 2006-01-12T19:35:54
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.384 2006/01/11 18:19:38 jrandom Exp $
+$Id: history.txt,v 1.385 2006/01/12 04:59:57 cervantes Exp $
+
+2005-01-12  jrandom
+    * Only create the loadtest.log if requested to do so (thanks zzz!)
+    * Make sure we cleanly take into consideration the appropriate data
+      points when filtering out duplicate messages in the message validator,
+      and report the right bloom filter false positives rate (not used for
+      anything except debugging)
 
 2005-01-12  cervantes
     * Syndie CSS tweaks to removed some redundant declarations, improve font
