--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.386 2006/01/12 14:35:55 jrandom Exp $
+$Id: history.txt,v 1.387 2006/01/12 16:18:40 jrandom Exp $
+
+2005-01-13  cervantes
+	* Further Syndie layout hardening and typeface balancing.
 
 * 2005-01-12  0.6.1.9 released
 
