2005-01-14  cervantes 	* Removed entirely misleading memory status from the console summary.
Monotone-Parent: 3d0b3b075e3bec692dfb1ca6203530f1eb32f2a0
Monotone-Revision: fe99601b3671475a549e56e54f3a38ef22fe8c6f

Monotone-Author: cervantes
Monotone-Date: 2006-01-14T20:14:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,8 @@
-$Id: history.txt,v 1.387 2006/01/12 16:18:40 jrandom Exp $
+$Id: history.txt,v 1.388 2006/01/13 01:27:45 cervantes Exp $
 
+2005-01-14  cervantes
+	* Removed entirely misleading memory status from the console summary.
+	
 2005-01-13  cervantes
 	* Further Syndie layout hardening and typeface balancing.
 
