--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.390 2006/01/16 17:00:04 cervantes Exp $
+$Id: history.txt,v 1.391 2006/01/17 17:56:15 jrandom Exp $
+
+2006-01-18  cervantes
+    * Add title attributes to all external links in Syndie, so we can rollover
+      and quickly see if it's worth clicking on.
+    * Fixed a minor compiler warning.
 
 2006-01-17  jrandom
     * First pass of the new tunnel creation crypto, specified in the new 
