2006-01-19  Complication     * Explain better where eepsite's destkey can be found
Monotone-Parent: 67354c1ce336b186a55ac5ff1455136f47ef193d
Monotone-Revision: a3821284cf59b5efaf73fcc53c7f5beddcb25b33

Monotone-Author: complication
Monotone-Date: 2006-01-20T04:40:24
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.391 2006/01/17 17:56:15 jrandom Exp $
+$Id: history.txt,v 1.392 2006/01/18 01:37:53 cervantes Exp $
+
+2006-01-19  Complication
+    * Explain better where eepsite's destkey can be found
 
 2006-01-18  cervantes
     * Add title attributes to all external links in Syndie, so we can rollover
