2006-01-25  dust     * Fix IRC client proxy to use ISO-8859-1.
Monotone-Parent: 6b5baa9d8c1080adf68f20d3b4fe8fd117d177bf
Monotone-Revision: b3c11d13512098eb39dfb61bcb7d2ff725fe30a5

Monotone-Author: dust
Monotone-Date: 2006-01-25T15:34:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.393 2006/01/19 23:40:24 complication Exp $
+$Id: history.txt,v 1.394 2006/01/22 19:51:57 jrandom Exp $
+
+2006-01-25  dust
+    * Fix IRC client proxy to use ISO-8859-1.
 
 2006-01-22  jrandom
     * New tunnel build process - does not use the new crypto or new peer
