2006-02-16  jrandom     * Bugfix to the I2PTunnel web config to properly accept i2cp port settings     * Initial sucker refactoring to simplify reuse of the html parsing     * Beginnings of hooks to push imported rss/atom out to remote syndie       archives automatically (though not enabled currently)     * Further SSU peer test cleanup
Monotone-Parent: af5de82576f65ffacd9c33459a79db8dea33a27a
Monotone-Revision: ac72386d1439ef5401e58f1f0820fbe9a0578203

Monotone-Author: jrandom
Monotone-Date: 2006-02-16T08:24:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.397 2006/02/15 00:33:17 jrandom Exp $
+$Id: history.txt,v 1.398 2006/02/15 08:36:29 jrandom Exp $
+
+2006-02-16  jrandom
+    * Bugfix to the I2PTunnel web config to properly accept i2cp port settings
+    * Initial sucker refactoring to simplify reuse of the html parsing
+    * Beginnings of hooks to push imported rss/atom out to remote syndie
+      archives automatically (though not enabled currently)
+    * Further SSU peer test cleanup
 
 2006-02-15  jrandom
     * Add in per-blog RSS feeds to Syndie
