2006-02-16  jrandom     * Dropped much of the abandonware from the apps/ directory
Monotone-Parent: 89c1002aefe5838f79a0232ec78cb9decc51dc1b
Monotone-Revision: 62d2a426fb4a9e605da7f32199c8d1e402f3cc96

Monotone-Author: jrandom
Monotone-Date: 2006-02-16T09:45:22
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.398 2006/02/15 08:36:29 jrandom Exp $
+$Id: history.txt,v 1.399 2006/02/16 03:24:23 jrandom Exp $
+
+2006-02-16  jrandom
+    * Dropped much of the abandonware from the apps/ directory
 
 2006-02-16  jrandom
     * Bugfix to the I2PTunnel web config to properly accept i2cp port settings
