2006-02-16  jrandom     * Add a new toggle to the web config to enable/disable the load testing
Monotone-Parent: 62d2a426fb4a9e605da7f32199c8d1e402f3cc96
Monotone-Revision: 845177b419442bf9e3cb540aa29ba79b9bfb4d9a

Monotone-Author: jrandom
Monotone-Date: 2006-02-16T10:33:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.399 2006/02/16 03:24:23 jrandom Exp $
+$Id: history.txt,v 1.400 2006/02/16 04:45:23 jrandom Exp $
+
+2006-02-16  jrandom
+    * Add a new toggle to the web config to enable/disable the load testing
 
 2006-02-16  jrandom
     * Dropped much of the abandonware from the apps/ directory
