2006-02-17  jrandom     * Properly fix the build request queue throttling, using queue age to       detect congestion, rather than queue size.
Monotone-Parent: 964e0a73b44f4c864b8ab4f2b114f98212c0d246
Monotone-Revision: 64c9bba2db3a8b9a2c9b81b0573c9872e741a48d

Monotone-Author: jrandom
Monotone-Date: 2006-02-17T22:29:28
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.402 2006/02/16 15:44:07 jrandom Exp $
+$Id: history.txt,v 1.403 2006/02/17 04:07:53 jrandom Exp $
+
+2006-02-17  jrandom
+    * Properly fix the build request queue throttling, using queue age to
+      detect congestion, rather than queue size.
 
 2006-02-17  jrandom
     * Disable the message history log file by default (duh - feel free to
