2006-02-18  jrandom     * Migrate the outbound packets from a central component to the individual       per-peer components, substantially cutting down on lock contention when       dealing with higher degrees.     * Load balance the outbound SSU transfers evenly across peers, rather than       across messages (so peers with few messages won't be starved by peers       with many).     * Reduce the frequency of router info rebuilds (thanks bar!)
Monotone-Parent: aad20b7ded4f6b14301e8e6dbc80053a44f511a9
Monotone-Revision: 1599c00ce0ed179437e0b09fbebae891247f22f2

Monotone-Author: jrandom
Monotone-Date: 2006-02-19T03:22:31
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,13 @@
-$Id: history.txt,v 1.404 2006/02/17 17:29:33 jrandom Exp $
+$Id: history.txt,v 1.405 2006/02/18 01:48:48 jrandom Exp $
+
+2006-02-18  jrandom
+    * Migrate the outbound packets from a central component to the individual
+      per-peer components, substantially cutting down on lock contention when
+      dealing with higher degrees.
+    * Load balance the outbound SSU transfers evenly across peers, rather than
+      across messages (so peers with few messages won't be starved by peers
+      with many).
+    * Reduce the frequency of router info rebuilds (thanks bar!)
 
 2006-02-18  jrandom
     * Add a new AIMD throttle in SSU to control the number of concurrent
