* Added pruning of suckers history (it used to grow indefinitely).
Monotone-Parent: 5f3a98aae07aa530fbec5799fd7b390d69d5b540
Monotone-Revision: cf7fc99116ea023ff98abcb3334d7576d840d57c

Monotone-Author: dust
Monotone-Date: 2006-02-20T05:08:59
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.406 2006/02/18 22:22:33 jrandom Exp $
+$Id: history.txt,v 1.407 2006/02/19 07:29:57 jrandom Exp $
+
+2006-02-19  dust
+    * Added pruning of suckers history (it used to grow indefinitely).
 
 2006-02-19  jrandom
     * Moved the current net's reseed URL to a different location than where
