2006-02-20  jrandom     * Reenable the TCP transport as a fallback (we'll continue to muck with       debugging SSU-only elsewhere)
Monotone-Parent: dd9f6541a831c3b4c01f0a0f4638f00bbce63787
Monotone-Revision: fd913710a548d07cedd41f23d37b40effa87f6fb

Monotone-Author: jrandom
Monotone-Date: 2006-02-20T16:42:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.408 2006/02/20 00:08:59 dust Exp $
+$Id: history.txt,v 1.409 2006/02/20 09:27:38 jrandom Exp $
+
+2006-02-20  jrandom
+    * Reenable the TCP transport as a fallback (we'll continue to muck with
+      debugging SSU-only elsewhere)
 
 2006-02-20  jrandom
     * Major SSU and router tuning to reduce contention, memory usage, and GC
