2006-02-20  jrandom     * Properly enable TCP this time (oops)     * Deal with multiple form handlers on the same page in the console without       being too annoying (thanks blubb and bd_!)
Monotone-Parent: fd913710a548d07cedd41f23d37b40effa87f6fb
Monotone-Revision: d5977578c321142c6b296591bc267dcabc78fc3e

Monotone-Author: jrandom
Monotone-Date: 2006-02-20T18:12:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,9 @@
-$Id: history.txt,v 1.409 2006/02/20 09:27:38 jrandom Exp $
+$Id: history.txt,v 1.410 2006/02/20 11:42:36 jrandom Exp $
+
+2006-02-20  jrandom
+    * Properly enable TCP this time (oops)
+    * Deal with multiple form handlers on the same page in the console without
+      being too annoying (thanks blubb and bd_!)
 
 2006-02-20  jrandom
     * Reenable the TCP transport as a fallback (we'll continue to muck with
