2006-02-20  jrandom     * Throttle the outbound SSU establishment queue, so it doesn't fill up the       heap when backlogged (and so that the messages queued up on it don't sit       there forever)     * Further SSU memory cleanup
Monotone-Parent: d5977578c321142c6b296591bc267dcabc78fc3e
Monotone-Revision: 48eb82aa12a035a0337e493394f429c12f20bb03

Monotone-Author: jrandom
Monotone-Date: 2006-02-21T02:02:48
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.410 2006/02/20 11:42:36 jrandom Exp $
+$Id: history.txt,v 1.411 2006/02/20 13:12:47 jrandom Exp $
+
+2006-02-20  jrandom
+    * Throttle the outbound SSU establishment queue, so it doesn't fill up the
+      heap when backlogged (and so that the messages queued up on it don't sit
+      there forever)
+    * Further SSU memory cleanup
 
 2006-02-20  jrandom
     * Properly enable TCP this time (oops)
