2006-02-21  jrandom     * Throttle the outbound SSU establishment queue, so it doesn't fill up the       heap when backlogged (and so that the messages queued up on it don't sit       there forever)     * Further SSU memory cleanup     * Clean up the address regeneration code so it knows when to rebuild the       local info more precisely.
Monotone-Parent: 48eb82aa12a035a0337e493394f429c12f20bb03
Monotone-Revision: 61c5eca87b946961240977b378bb50b3242a176c

Monotone-Author: jrandom
Monotone-Date: 2006-02-21T13:31:18
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,10 +1,12 @@
-$Id: history.txt,v 1.411 2006/02/20 13:12:47 jrandom Exp $
+$Id: history.txt,v 1.412 2006/02/20 21:02:49 jrandom Exp $
 
-2006-02-20  jrandom
+2006-02-21  jrandom
     * Throttle the outbound SSU establishment queue, so it doesn't fill up the
       heap when backlogged (and so that the messages queued up on it don't sit
       there forever)
     * Further SSU memory cleanup
+    * Clean up the address regeneration code so it knows when to rebuild the
+      local info more precisely.
 
 2006-02-20  jrandom
     * Properly enable TCP this time (oops)
