2006-02-21  Complication     * Reactivate TCP tranport by default, in addition to re-allowing
Monotone-Parent: 05e6de601e7a5d31a150aae8f9fbdbb6901897c1
Monotone-Revision: 705da115c7c73249a6f6ba7994c41683ea6ee5ad

Monotone-Author: complication
Monotone-Date: 2006-02-22T06:19:19
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
-$Id: history.txt,v 1.413 2006/02/21 08:31:25 jrandom Exp $
+$Id: history.txt,v 1.414 2006/02/21 10:20:21 jrandom Exp $
+
+2006-02-21  Complication
+    * Reactivate TCP tranport by default, in addition to re-allowing
 
 * 2006-02-21  0.6.1.11 released
 
