2006-02-22  jrandom     * Handle a rare race under high bandwidth situations in the SSU transport     * Minor refactoring so we don't confuse sun's 1.6.0-b2 validator
Monotone-Parent: 705da115c7c73249a6f6ba7994c41683ea6ee5ad
Monotone-Revision: c8b4533a2950c212f751490d403f527f3bb712b0

Monotone-Author: jrandom
Monotone-Date: 2006-02-22T14:54:22
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.414 2006/02/21 10:20:21 jrandom Exp $
+$Id: history.txt,v 1.415 2006/02/22 01:19:19 complication Exp $
+
+2006-02-22  jrandom
+    * Handle a rare race under high bandwidth situations in the SSU transport
+    * Minor refactoring so we don't confuse sun's 1.6.0-b2 validator
 
 2006-02-21  Complication
     * Reactivate TCP tranport by default, in addition to re-allowing
