2006-02-22  jrandom     * Fix to properly profile tunnel joins (thanks Ragnarok, frosk, et al!)     * More aggressive poor-man's PMTU, allowing larger MTUs on less reliable       links     * Further class validator refactorings
Monotone-Parent: c700356a378d5243e25f091f4fbb6abb5e628545
Monotone-Revision: 05d29604d642a6bae3a598a2aa18657ff84c50fb

Monotone-Author: jrandom
Monotone-Date: 2006-02-23T08:08:37
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.415 2006/02/22 01:19:19 complication Exp $
+$Id: history.txt,v 1.416 2006/02/22 09:54:22 jrandom Exp $
+
+2006-02-22  jrandom
+    * Fix to properly profile tunnel joins (thanks Ragnarok, frosk, et al!)
+    * More aggressive poor-man's PMTU, allowing larger MTUs on less reliable
+      links
+    * Further class validator refactorings
 
 2006-02-22  jrandom
     * Handle a rare race under high bandwidth situations in the SSU transport
