2006-02-23  jrandom     * Increase the SSU retransmit ceiling (for slow links)     * Estimate the sender's SSU MTU (to help see if we agree)
Monotone-Parent: 05d29604d642a6bae3a598a2aa18657ff84c50fb
Monotone-Revision: 3ef5a982fd4f03a81e30ada651c747a83030c44f

Monotone-Author: jrandom
Monotone-Date: 2006-02-23T14:38:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
-$Id: history.txt,v 1.416 2006/02/22 09:54:22 jrandom Exp $
+$Id: history.txt,v 1.417 2006/02/23 03:08:37 jrandom Exp $
+
+2006-02-23  jrandom
+    * Increase the SSU retransmit ceiling (for slow links)
+    * Estimate the sender's SSU MTU (to help see if we agree)
 
 2006-02-22  jrandom
     * Fix to properly profile tunnel joins (thanks Ragnarok, frosk, et al!)
