--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.417 2006/02/23 03:08:37 jrandom Exp $
+$Id: history.txt,v 1.418 2006/02/23 09:38:41 jrandom Exp $
+
+2006-02-24  jrandom
+    * Rounding calculation cleanup in the stats, and avoid an uncontested
+      mutex (thanks ripple!)
+    * SSU handshake cleanup to help force incompatible peers to stop nagging
+      us by both not giving them an updated reference to us and by dropping
+      future handshake packets from them.
 
 2006-02-23  jrandom
     * Increase the SSU retransmit ceiling (for slow links)
