2006-02-25  jrandom     * Made the Syndie permalinks in the thread view point to the blog view     * Disabled TCP again (since the live net seems to be doing well w/out it)     * Fix the message time on inbound SSU establishment (thanks zzz!)     * Don't be so aggressive with parallel tunnel creation when a tunnel pool       just starts up
Monotone-Parent: c0f06a4c7ac4a19f1eac0f2e56367c2bd03def81
Monotone-Revision: cc684e736f62da0283795ec424bf54f16f151b65

Monotone-Author: jrandom
Monotone-Date: 2006-02-25T20:41:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
-$Id: history.txt,v 1.418 2006/02/23 09:38:41 jrandom Exp $
+$Id: history.txt,v 1.419 2006/02/24 04:35:52 jrandom Exp $
+
+2006-02-25  jrandom
+    * Made the Syndie permalinks in the thread view point to the blog view
+    * Disabled TCP again (since the live net seems to be doing well w/out it)
+    * Fix the message time on inbound SSU establishment (thanks zzz!)
+    * Don't be so aggressive with parallel tunnel creation when a tunnel pool
+      just starts up
 
 2006-02-24  jrandom
     * Rounding calculation cleanup in the stats, and avoid an uncontested
