2006-02-26  jrandom     * Switch from the bouncycastle to the gnu-crypto implementation for       SHA256, as benchmarks show a 10-30% speedup.     * Removed some unnecessary object caches     * Don't close i2psnark streams prematurely
Monotone-Parent: f5b313eff56fa8d15665427050a71c0eeaaf9b91
Monotone-Revision: 4d64944c664c52bbc06a02be841230677a2d0805

Monotone-Author: jrandom
Monotone-Date: 2006-02-26T21:30:56
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
-$Id: history.txt,v 1.419 2006/02/24 04:35:52 jrandom Exp $
+$Id: history.txt,v 1.420 2006/02/25 15:41:52 jrandom Exp $
+
+2006-02-26  jrandom
+    * Switch from the bouncycastle to the gnu-crypto implementation for
+      SHA256, as benchmarks show a 10-30% speedup.
+    * Removed some unnecessary object caches
+    * Don't close i2psnark streams prematurely
 
 2006-02-25  jrandom
     * Made the Syndie permalinks in the thread view point to the blog view
